--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,126 +1,1 @@
-html,
-body {
-  height: 100%;
-  width: 100%;
-}
-.clear {
-  clear: both;
-}
-/* Custom page header */
-.header {
-  background: url("https://a-v2.sndcdn.com/assets/images/header/header-bg-38b02b00.png") repeat-x scroll 0 0 transparent;
-  border-top: 1px solid #2a2a2a;
-  font: 100 14px/1.5 "Interstate", "Lucida Grande", Arial, sans-serif;
-  height: 48px;
-  width: 100%;
-  z-index: 1000;
-  color: #999;
-}
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-  padding-bottom: 19px;
-}
-.header .header__logo {
-  margin-left: 15px;
-  margin-top: -1px;
-  border-left: 1px solid #000;
-  background: linear-gradient(#ff7700, #ff3300) repeat scroll 0% 0% transparent;
-  box-shadow: -1px 0px 0px rgba(255, 255, 255, 0.08);
-}
-.header .header__logolink {
-  background: url('https://a-v2.sndcdn.com/assets/images/header/logo-98c690f3.png');
-  display: block;
-  height: 46px;
-  width: 84px;
-  border-width: 1px;
-  border-style: solid;
-  border-color: rgba(173, 73, 0, 0.7) rgba(255, 255, 255, 0.15) #ad4900;
-  border: 0px none;
-  font: 0px/0 a;
-  color: #CCC;
-  text-shadow: 0px 1px 0px #000;
-}
-.header .btn-connect {
-  cursor: pointer;
-  float: right;
-  margin-right: 10px;
-  margin-top: 7px;
-}
-.viewContainer {
-  top: 46px;
-  position: relative;
-  height: 404px;
-  overflow: auto;
-}
-.l-container.l-fullwidth {
-  width: 100% !important;
-}
-.stream ul {
-  list-style: none outside none;
-  margin: 0px;
-  padding: 10px 10px;
-}
-.stream .soundList__item {
-  clear: both;
-  padding: 10px 0px 0px;
-  margin: 0px 0px 25px;
-  position: relative;
-  min-height: 120px;
-}
-.stream .soundList__item:first-child {
-  padding-top: 0px;
-}
-.stream .soundList__item .sound {
-  position: relative;
-  padding-left: 136px;
-  top: 0px;
-  left: 0px;
-  right: 0px;
-  height: 100%;
-  box-sizing: border-box;
-}
-.stream .soundList__item .sound .soundTitle__playButton,
-.stream .soundList__item .sound .soundInfo {
-  display: table-cell;
-}
-.stream .soundList__item .sound .soundTitle__username {
-  position: relative;
-  vertical-align: top;
-  margin-left: 10px;
-}
-.stream .sound__header {
-  min-height: 43px;
-  padding-top: 7px;
-  position: relative;
-  z-index: 2;
-}
-.stream .sound__header .soundTitle {
-  display: table;
-}
-.stream .sound__coverArt {
-  background-position: center center;
-  background-repeat: no-repeat;
-  position: absolute;
-  z-index: 2;
-  width: 120px;
-  height: 120px;
-  left: -12px;
-  top: -10px;
-  padding: 10px 10px 12px 12px;
-  display: inline-block;
-}
-.stream .sound__coverArt .image__hasPlaceholder {
-  background-color: #F2F2F2;
-  background-image: url('https://a-v2.sndcdn.com/assets/images/default/cloudx200-38b02b00.png');
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  height: 100%;
-  width: 100%;
-}
-.stream .sound__coverArt .image__hasPlaceholder img {
-  width: 100%;
-  height: 100%;
-}
+html,body{height:100%;width:100%;overflow-x:hidden;background-color:#f8f8f8 !important}.clear{clear:both}.header{background:url("https://a-v2.sndcdn.com/assets/images/header/header-bg-38b02b00.png") repeat-x scroll 0 0 transparent;font:100 14px/1.5 "Interstate","Lucida Grande",Arial,sans-serif;height:48px;width:100%;z-index:1000;color:#999}.header h3{margin-top:0;margin-bottom:0;line-height:40px;padding-bottom:19px}.header .header__logo{margin-top:-1px;background:linear-gradient(#f70, #f30) repeat scroll 0 0 transparent;box-shadow:-1px 0 0 rgba(255,255,255,0.08)}.header .header__logolink{background:url('https://a-v2.sndcdn.com/assets/images/header/logo-98c690f3.png');display:block;height:46px;width:84px;border-width:1px;border-style:solid;border-color:rgba(173,73,0,0.7) rgba(255,255,255,0.15) #ad4900;border:0 none;font:0/0 a;color:#ccc;text-shadow:0 1px 0 #000}.header .menuBtn{display:inline-block;height:46px;width:40px;text-align:center;float:left;cursor:pointer;vertical-align:middle}.header .menuBtn i{padding-top:13px;font-size:20px}.header .menuBtn:active{background-color:rgba(255,255,255,0.1)}.header .btn-connect{cursor:pointer;float:right;margin-right:10px;margin-top:7px}.header .currentState{margin:0;padding:0;display:inline-block;float:left;margin-left:10px;position:relative;top:13px}.viewContainer{top:46px;position:relative;height:404px;overflow:auto;transition:all .3s ease-out}.viewContainer.active{left:200px}footer{border-top:1px solid #d5d5d5;background-color:#fff;width:100%;height:45px;z-index:4;position:fixed}footer .wrapper{padding:0 10px;height:100%}footer input.search{padding:10px;width:150px;height:100%;border:none;border-left:1px solid #d5d5d5;border-right:1px solid #d5d5d5}footer .fa-search{float:left;margin-top:12px;font-size:20px;margin-right:10px;cursor:pointer}.l-container.l-fullwidth{width:100% !important}.stream ul{list-style:none outside none;margin:0;padding:10px 10px}.stream .soundList__item{clear:both;padding:10px 0 0;margin:0 0 25px;position:relative;min-height:120px}.stream .soundList__item:first-child{padding-top:0}.stream .soundList__item .sound{position:relative;padding-left:136px;top:0;left:0;right:0;height:100%;box-sizing:border-box}.stream .soundList__item .sound .soundTitle__playButton,.stream .soundList__item .sound .soundInfo{vertical-align:top;display:table-cell}.stream .soundList__item .sound .soundInfo{padding-left:10px}.stream .soundList__item .sound .soundTitle__username,.stream .soundList__item .sound .soundTitle__title{vertical-align:top}.stream .sound__header{min-height:43px;padding-top:7px;position:relative;z-index:2}.stream .sound__header .soundTitle{display:table}.stream .sound__coverArt{background-position:center center;background-repeat:no-repeat;position:absolute;z-index:2;width:120px;height:120px;left:-12px;top:-10px;padding:10px 10px 12px 12px;display:inline-block}.stream .sound__coverArt .image__hasPlaceholder{background-color:#f2f2f2;background-image:url('https://a-v2.sndcdn.com/assets/images/default/cloudx200-38b02b00.png');background-position:center center;background-repeat:no-repeat;background-size:100% 100%;height:100%;width:100%}.stream .sound__coverArt .image__hasPlaceholder img{width:100%;height:100%}.menu{position:absolute;left:-210px;width:200px;background-color:#fff;height:100%;z-index:3;transition:all .3s ease-out;box-shadow:0 0 20px 0 rgba(0,0,0,0.4);border-right:1px solid #d5d5d5}.menu.active{left:0}.menu .menuContainer{padding-top:45px}.menu .menuContainer ul{list-style:none;padding:0;margin:0}.menu .menuContainer ul li{border-bottom:1px solid #eee;padding:10px;cursor:pointer;color:#2f2f2f}.menu .menuContainer ul li .label{padding-left:30px;display:inline-block}.menu .menuContainer ul li i{font-size:16px;position:absolute}.menu .menuContainer ul li:hover{color:#ff5324}.menu .menuContainer ul li.active i{color:#ff5324}.menu .menuContainer ul li.explore .label{margin-top:2px}.menu .menuContainer ul li.explore .fa{font-size:19px}.menu .wrapper{padding:0 10px}.menu .cover{width:100%;height:120px;background-position:0 50%}.menu .cover .username{margin-bottom:2px;margin-top:65px}.menu .cover .fa-users{margin-right:5px}.menu .cover .caption{color:#fff;background:rgba(0,0,0,0.6);display:inline-block;padding:3px}
