--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,6 @@
 <section class="stream">
   <ul>
-    <li ng-repeat="(key, obj) in stream.collection" class="soundList__item">
+    <li ng-repeat="(key, obj) in user.stream.collection" class="soundList__item">
       <div class="activity">
         <div sound ng-init="value = (obj.track) ? obj.track : obj.playlist"></div>
       </div>
